--- a/src/style.css
+++ b/src/style.css
@@ -104,6 +104,8 @@ input[type=number]::-webkit-outer-spin-button {
 
 .bpm-input {
   padding: 20px 0;
+
+  user-select: none;
 }
 
 input {
@@ -120,6 +122,8 @@ input {
   outline: none;
 
   font-family: "Digital-7";
+
+  user-select: none;
 }
 
 .increment-buttons {
@@ -140,13 +144,7 @@ input {
 
   cursor: pointer;
 
-  -webkit-touch-callout: none; /* iOS Safari */
-    -webkit-user-select: none; /* Safari */
-     -khtml-user-select: none; /* Konqueror HTML */
-       -moz-user-select: none; /* Old versions of Firefox */
-        -ms-user-select: none; /* Internet Explorer/Edge */
-            user-select: none; /* Non-prefixed version, currently */
-
+  user-select: none;
 }
 
 .increment-buttons button::after {
